# hypr-brightness

./: CMakeLists.txt  README.md
include/: cache.h  hyprland.h  i2c.h  monitor.h
src/: cache.c  hyprland.c  i2c.c  main.c
